--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main  # Atualizará automaticamente no branch principal
+      - main  # Atualizará automaticamente no branch principal  add
 
 jobs:
   deploy:
